# GPU-Task-Manager

./: LICENSE  README.md  build.bat  build.spec  pyproject.toml  run.py  task_config.json  task_history.json
gpu_manager/: __init__.py  __main__.py
gpu_manager/core/: __init__.py  conda_manager.py  config.py  gpu_manager.py  logger.py  models.py  scheduler.py  task_thread.py  utils.py
gpu_manager/ui/: __init__.py  dialogs.py  gpu_card.py  ops_widget.py
gpu_manager/ui/main_window/: __init__.py  base.py  gpu_ops.py  log_cfg.py  task_mgmt.py  task_ops.py
tests/: conftest.py  test_models.py  test_scheduler.py  test_task_thread.py
