[project]
name = "gpu-manager"
version = "2.1.0"
description = "GPU 任务管理器 — 深度学习训练任务队列管理工具"
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15",
    "psutil>=5.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyqt5"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["gpu_manager*"]
